--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/Index.cshtml
@@ -8,6 +8,90 @@
     @{
         ViewBag.Title = "Index";
     }
+    <script src="~/Resources/js/lib/jquery-1.9.1.js"></script>
+    <script type="text/javascript">
+        $(function () {
+            $('select').on('change', function () {
+                $('#tblfilterable tbody tr').each(function () {
+                    var value = $('#cbxentidad').find('option:selected').text();//get value to filter of selected
+                    var hiderow = $(this).find("td").eq(1).html();//get value of column entidad
+                    /*---------------------------------------*/
+                    var valuec = $('#cbxconcepto').find('option:selected').text();//get value to filter of selected
+                    var hiderowc = $(this).find("td").eq(3).html();//get value of column concepto
+
+                    if (value != 'Seleccione' || valuec != 'Seleccione') {
+
+                        if (valuec != 'Seleccione') {
+                            if (valuec != hiderowc) {
+                                var rowindex = $(this).index();
+                                $('#tblfilterable tbody tr:eq(' + rowindex + ')').hide();
+                            }
+                            if (valuec == hiderowc) {
+                                var rowindex = $(this).index();
+                                $('#tblfilterable tbody tr:eq(' + rowindex + ')').show();
+                            }
+                        }
+                        if (value != 'Seleccione') {
+                            if (value != hiderow) {
+                                var rowindex = $(this).index();
+                                $('#tblfilterable tbody tr:eq(' + rowindex + ')').hide();
+                            }
+                            if (value == hiderow) {
+                                var rowindex = $(this).index();
+                                $('#tblfilterable tbody tr:eq(' + rowindex + ')').show();
+                            }
+                        }
+                    }
+                    else { $('#tblfilterable tbody tr').show(); }
+                });
+            });
+            /*******/
+            $("#IdA").keyup(function () {
+                var from = $("#IdDe").val();
+                var To = $(this).val();
+                var index = 0;
+                if (from != "" && To != "") {
+                    var dateParts = from.split("/");
+                    var datefrom = new Date(dateParts[2], dateParts[1] - 1, dateParts[0]);
+                    var dateParts2 = To.split("/");
+                    var dateto = new Date(dateParts2[2], dateParts2[1] - 1, dateParts2[0]);
+
+                    $('#tblfilterable tbody tr').each(function () {
+                        var filterdate = $(this).find("td").eq(index).html();//get value of column Fecha x
+                        var dateParts3 = filterdate.split("/");
+                        var datefilter = new Date(dateParts3[2].split(" ", 1), dateParts3[1] - 1, dateParts3[0]);
+
+                        if (datefilter >= datefrom && datefilter <= dateto) {
+                            var rowindex = $(this).index();
+                            $('#tblfilterable tbody tr:eq(' + rowindex + ')').show();
+                        }
+                        else {
+                            var rowindex = $(this).index();
+                            $('#tblfilterable tbody tr:eq(' + rowindex + ')').hide();
+                        }
+                    });
+                }
+                else {
+                    $('#tblfilterable tbody tr').show();
+                }
+            });
+        });
+
+        //$("#btnConsultar").click(function () {
+        //    var form = $(this).parent("form");
+        //    form.attr('action', '<%= Url.RouteUrl(new { Controller = "CajaGeneral", Action = "Consultar" }) %>');
+        //    form.attr('method', 'post');
+        //});
+    </script>
+    <style type="text/css">
+        .col-sm-01 {
+            -webkit-box-flex: 0;
+            -ms-flex: 0 0 16.666667%;
+            flex: 0 0 16.666667%;
+            max-width: 4.666667%;
+            text-align: left;
+        }
+    </style>
 </head>
 <body style="height:100%">
     @using (Html.BeginForm("Liquidar", "CajaGeneral", FormMethod.Post))
@@ -22,6 +106,7 @@
                                     <div class="col-sm-3">
                                         <b>Gasera</b>
                                         <select name="IdEmpresa" id="ddlEmpresas" class="form-control selectpicker z-index show-tick">
+                                            <option value="0">Seleccione</option>
                                             @foreach (var lst in ViewBag.Empresas)
                                             {
                                                 <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
@@ -36,42 +121,57 @@
                     <div class="card">
                         <div class="body">
                             <div class="row clearfix">
-                                <div class="col-sm-1">
+                                <div class="col-sm-01">
                                     <b>Fecha:</b>
                                 </div>
                                 <div class="col-sm-2">
                                     <b>De:</b>
-                                    <input type="text" id="IdDe" class="form-control" />
+                                    <div class="input-group">
+                                        <span class="input-group-addon">
+                                            <i class="zmdi zmdi-calendar"></i>
+                                        </span>
+                                        <input type="text" id="IdDe" name="FechaProgramada" class="form-control date" placeholder="dd/mm/aaaa" />
+                                    </div>
                                 </div>
                                 <div class="col-sm-2">
                                     <b>A:</b>
-                                    <input type="text" id="IdA" class="form-control" />
+                                    <div class="input-group">
+                                        <span class="input-group-addon">
+                                            <i class="zmdi zmdi-calendar"></i>
+                                        </span>
+                                        <input type="text" id="IdA" name="FechaProgramada" class="form-control date" placeholder="dd/mm/aaaa" />
+                                    </div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-sm-3">
                                     <b>Entidad:</b>
-                                    <select id="IdTipoFecha" class="form-control selectpicker z-index show-tick">
+                                    <select id="cbxentidad" class="form-control selectpicker z-index show-tick">
                                         <option value="0">Seleccione</option>
-                                        @*@foreach (var lst in ViewBag.Entidad)
+                                        @if (ViewBag.CajaGeneral != null)
+                                        {
+                                            foreach (var lst in ViewBag.CajaGeneral)
                                             {
-                                                <option value="@lst.IdPrecioVentaEstatus">@lst.Descripción</option>
-                                            }*@
+                                                <option value="@lst.PuntoVenta">@lst.PuntoVenta</option>
+                                            }
+                                        }
                                     </select>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-sm-3">
                                     <b>Concepto:</b>
-                                    <select id="IdTipoFecha" class="form-control selectpicker z-index show-tick">
+                                    <select id="cbxconcepto" class="form-control selectpicker z-index show-tick">
                                         <option value="0">Seleccione</option>
-                                        @*@foreach (var lst in ViewBag.Entidad)
+                                        @if (ViewBag.CajaGeneral != null)
+                                        {
+                                            foreach (var lst in ViewBag.CajaGeneral)
                                             {
-                                                <option value="@lst.IdPrecioVentaEstatus">@lst.Descripción</option>
-                                            }*@
+                                                <option value="@lst.TipoMovimiento">@lst.TipoMovimiento</option>
+                                            }
+                                        }
                                     </select>
                                 </div>
-                                <div class="col-sm-2">
-                                    <input type="submit" id="btnRegistraPrecio" value="Consultar" formmethod="post" class="btn btn-raised btn-primary float-right" />
-                                </div>
-                                <div class="col-sm-1">
-                                    <input type="submit" id="btnRegistraPrecio" value="Liquidar" formmethod="post" class="btn btn-raised btn-primary float-right" />
+                                <div class="col-sm-12">
+                                    <input type="submit" value="Liquidar" formmethod="post" class="btn btn-raised btn-primary float-right" />
+
+                                    <input type="submit" id="btnConsultar" value="Consultar" formaction=@Url.Action("Consultar") formmethod="post" class="btn btn-raised btn-primary float-right" />
                                 </div>
                             </div>
                             <br />
@@ -96,16 +196,16 @@
                                                 {
                                                     foreach (var item in ViewBag.CajaGeneral)
                                                     {
-                                                <tr>
-                                                    <td>@item.Fecha</td>
-                                                    <td>@item.Entidad</td>
-                                                    <td>@item.OperadorChofer</td>
-                                                    <td>@item.Concepto</td>
-                                                    <td>@item.Descripcion</td>
-                                                    <td>@item.Ingreso</td>
-                                                    <td>@item.Egreso</td>
-                                                    <td>@item.Saldo</td>
-                                                </tr>
+                                                        <tr>
+                                                            <td>@item.FechaAplicacion</td>
+                                                            <td>@item.PuntoVenta</td>
+                                                            <td>@item.OperadorChoferNombre</td>
+                                                            <td>@item.TipoMovimiento</td>
+                                                            <td>@item.Descripcion</td>
+                                                            <td>$@item.Ingreso</td>
+                                                            <td>$@item.Egreso</td>
+                                                            <td>$@item.Saldo</td>
+                                                        </tr>
                                                     }
                                                 }
                                             </tbody>
@@ -114,7 +214,7 @@
                                 </div>
                             </div>
                             <div class="row clearfix">
-                                @if (ViewBag.CajaGeneral != null)
+                                @if (ViewBag.CajaGeneral != null && ViewBag.CajaGeneral.Count >= 1)
                                 {
                                     <div class="col-md-6">
                                         Pagina @(ViewBag.CajaGeneral.PageCount < ViewBag.CajaGeneral.PageNumber ? 0 : ViewBag.CajaGeneral.PageNumber) de @ViewBag.CajaGeneral.PageCount
