--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PrecioVenta/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PrecioVenta/Index.cshtml
@@ -8,25 +8,25 @@
 
     <script src="~/Resources/js/lib/jquery-1.9.1.js"></script>
     <script type="text/javascript">
-        $(function () {
-            $('select').on('change', function () {
-                $('#tblfilterable tbody tr').each(function () {
-                    var value = $('#IdTipoFecha').find('option:selected').text();//get value to filter of selected
-                    var hiderow = $(this).find("td").eq(6).html();//get value of column status
-                    if (value != hiderow) {
-                        var rowindex = $(this).index();
-                        $('#tblfilterable tbody tr:eq(' + rowindex + ')').hide();
-                    }
-                    if (value == hiderow) {
-                        var rowindex = $(this).index();
-                        $('#tblfilterable tbody tr:eq(' + rowindex + ')').show();
-                    }
-                    if (value == 'Seleccione') {
-                        $('#tblfilterable tbody tr').show();
-                    }
-                });
-            });
-        });
+        //$(function () {
+        //    $('select').on('change', function () {
+        //        $('#tblfilterable tbody tr').each(function () {
+        //            var value = $('#IdTipoFecha').find('option:selected').text();//get value to filter of selected
+        //            var hiderow = $(this).find("td").eq(6).html();//get value of column status
+        //            if (value != hiderow) {
+        //                var rowindex = $(this).index();
+        //                $('#tblfilterable tbody tr:eq(' + rowindex + ')').hide();
+        //            }
+        //            if (value == hiderow) {
+        //                var rowindex = $(this).index();
+        //                $('#tblfilterable tbody tr:eq(' + rowindex + ')').show();
+        //            }
+        //            if (value == 'Seleccione') {
+        //                $('#tblfilterable tbody tr').show();
+        //            }
+        //        });
+        //    });
+        //});
 
         $(document).ready(function () {
             $("#txtUtilidad").keyup(function () {
@@ -56,14 +56,31 @@
 
             /*******/
             $("#IdA").keyup(function () {
-                debugger
                 var from = $("#IdDe").val();
                 var To = $(this).val();
+                var index = 0;
+                var value = $('#IdTipoFecha').find('option:selected').val();//get value to filter of selected
+                if (value == 1) {
+                    index = 4;
+                }
+                if (value == 2) {
+                    index = 7;
+                }
+                if (value == 3) {
+                    index = 6;
+                }
+
+                var dateParts = from.split("/");
+                var datefrom = new Date(dateParts[2], dateParts[1] - 1, dateParts[0]);
+                var dateParts2 = To.split("/");
+                var dateto = new Date(dateParts2[2], dateParts2[1] - 1, dateParts2[0]);
 
                 $('#tblfilterable tbody tr').each(function () {
-                    var filterdate = $(this).find("td").eq(4).html().split(" ", 1);//get value of column Fecha Programada
+                    var filterdate = $(this).find("td").eq(index).html();//get value of column Fecha x
+                    var dateParts3 = filterdate.split("/");
+                    var datefilter = new Date(dateParts3[2].split(" ", 1), dateParts3[1] - 1, dateParts3[0]);
 
-                    if (from == filterdate || To == filterdate) {
+                    if (datefilter >= datefrom && datefilter <= dateto) {
                         var rowindex = $(this).index();
                         $('#tblfilterable tbody tr:eq(' + rowindex + ')').show();
                     }
@@ -72,6 +89,49 @@
                         $('#tblfilterable tbody tr:eq(' + rowindex + ')').hide();
                     }
                 });
+            });
+            $('select').on('change', function () {
+
+                var from = $("#IdDe").val();
+                var To = $("#IdA").val();
+                var value = $('#IdTipoFecha').find('option:selected').val();//get value to filter of selected
+                if (from != "" && To != "" && value != 0) {
+
+                    var index = 0;
+
+                    if (value == 1) {
+                        index = 4;
+                    }
+                    if (value == 2) {
+                        index = 7;
+                    }
+                    if (value == 3) {
+                        index = 5;
+                    }
+
+                    var dateParts = from.split("/");
+                    var datefrom = new Date(dateParts[2], dateParts[1] - 1, dateParts[0]);
+                    var dateParts2 = To.split("/");
+                    var dateto = new Date(dateParts2[2], dateParts2[1] - 1, dateParts2[0]);
+
+                    $('#tblfilterable tbody tr').each(function () {
+                        var filterdate = $(this).find("td").eq(index).html();//get value of column Fecha Programada  x
+                        var dateParts3 = filterdate.split("/");
+                        var datefilter = new Date(dateParts3[2].split(" ", 1), dateParts3[1] - 1, dateParts3[0]);
+                        if (datefilter >= datefrom && datefilter <= dateto) {
+                            var rowindex = $(this).index();
+                            $('#tblfilterable tbody tr:eq(' + rowindex + ')').show();
+                        }
+                        else {
+                            var rowindex = $(this).index();
+                            $('#tblfilterable tbody tr:eq(' + rowindex + ')').hide();
+                        }
+                    });
+                }
+
+                if (value == 0) {
+                    $('#tblfilterable tbody tr').show();
+                }
             });
         });
     </script>
@@ -124,7 +184,7 @@
                                         <select name="IdEmpresa" id="ddlEmpresas" class="form-control selectpicker z-index show-tick" data-live-search="true" onchange="">
                                             @foreach (var lst in ViewBag.Empresas)
                                             {
-                                                <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                            <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
                                             }
                                         </select>
                                     </div>
@@ -222,10 +282,9 @@
                                     <b>Tipo de Fecha:</b>
                                     <select id="IdTipoFecha" class="form-control selectpicker z-index show-tick">
                                         <option value="0">Seleccione</option>
-                                        @foreach (var lst in ViewBag.ListaStatus)
-                                        {
-                                            <option value="@lst.IdPrecioVentaEstatus">@lst.Descripción</option>
-                                        }
+                                        <option value="1">Fecha Programada</option>
+                                        <option value="2">Fecha Registro</option>
+                                        <option value="3">Fecha Vencimiento</option>
                                     </select>
                                 </div>
                                 <div class="col-sm-3">
