JSA-11/10/2018-Correcciones flujo

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/Ordenes.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/Ordenes.cshtml
@@ -7,6 +7,15 @@
 }
 <link rel="stylesheet" href="~/assets/plugins/bootstrap-colorpicker/css/bootstrap-colorpicker.css" />
 
+<script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
+<script src="~/assets/js/pages/ui/notifications.js"></script>
+
+<script type="text/javascript">
+    var mensaje = '@ViewBag.Msj';
+    if (mensaje != '') {
+        $(window).on("load", showNotification('alert-success', mensaje, 'top', 'center', '', ''));
+    }
+</script>
 <body style="padding-top:10px">
     @using (Html.BeginForm("Ordenes", "OrdenCompra", FormMethod.Post))
     {
