--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisiciones.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisiciones.cshtml
@@ -1,18 +1,30 @@
 ﻿@using MVC.Presentacion.Models.Requisicion
 @using PagedList.Mvc;
 @using PagedList;
-@model MVC.Presentacion.Models.Requisicion.RequisicionesModel
+@model RequisicionesModel
+<script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
+<script src="~/assets/js/pages/ui/notifications.js"></script>
 
-<!-- Page Loader -->
-<div class="page-loader-wrapper">
-    <div class="loader">
-        <div class="m-t-30"><img src="~/assets/images/LogoCorpKonsilio183x183.png" width="48" height="48" alt="Alpino"></div>
-        <p>Espere por favor</p>
-    </div>
-</div>
-<body style="padding-top:10px">
+<script src="~/assets/bundles/datatablescripts.bundle.js"></script>
+
+<script src="~/assets/js/pages/tables/jquery-datatable.js"></script>
+<script src="~/Scripts/js/RequisicionesJS.js"></script>
+
+
+<script type="text/javascript">
+    var numReq = '@ViewBag.NumeroRequisicion';
+    if (numReq != '') {
+        $(window).on("load", showNotification('alert-success', numReq, 'top', 'center', '', ''));
+    }
+</script>
     @using (Html.BeginForm("Requisicion", "Requisicion", FormMethod.Post))
     {
+        <div class="page-loader-wrapper">
+            <div class="loader">
+                <div class="m-t-30"><img src="~/assets/images/LogoCorpKonsilio183x183.png" width="48" height="48" alt="Alpino"></div>
+                <p>Espere por favor</p>
+            </div>
+        </div>
         <section class="content home">
             <div class="container-fluid">
                 <div class="block-header">
@@ -27,6 +39,11 @@
                             </ul>
                         </div>
                     </div>
+                    @*@if (ViewBag.Requisiciones != null)
+                    {*@
+                        <div onload="javascript: showNotification('alert-success', 'Proceso Exitoso', 'top', 'center', '', '');"></div>
+                     
+                    @*}*@                   
                     <div class="row clearfix">
                         <div class="col-lg-12">
                             <div class="card">
@@ -42,7 +59,6 @@
                                                     <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
                                                 }
                                             </select>
-
                                         </div>
                                         <div class="col-sm-4">
                                             <div class="form-group">
@@ -184,15 +200,7 @@
         </section>
 
     }
-</body>
-<script src="~/assets/bundles/datatablescripts.bundle.js"></script>
-<script src="~/assets/plugins/jquery-datatable/buttons/dataTables.buttons.min.js"></script>
-<script src="~/assets/plugins/jquery-datatable/buttons/buttons.bootstrap4.min.js"></script>
-<script src="~/assets/plugins/jquery-datatable/buttons/buttons.colVis.min.js"></script>
-<script src="~/assets/plugins/jquery-datatable/buttons/buttons.html5.min.js"></script>
-<script src="~/assets/plugins/jquery-datatable/buttons/buttons.print.min.js"></script>
-<script src="~/assets/js/pages/tables/jquery-datatable.js"></script>
-<script src="~/Scripts/js/RequisicionesJS.js"></script>
+
 
 
 
